--- a/0-bootstrap/single-cluster/2-services/kustomization.yaml
+++ b/0-bootstrap/single-cluster/2-services/kustomization.yaml
@@ -4,11 +4,11 @@ resources:
 # Sealed Secrets
 - argocd/instances/sealed-secrets.yaml
 
-# B2BI
-- argocd/instances/ibm-sfg-db2-prod.yaml
-- argocd/instances/ibm-sfg-mq-prod.yaml
-- argocd/instances/ibm-sfg-b2bi-prod-setup.yaml
-- argocd/instances/ibm-sfg-b2bi-prod.yaml
+# # B2BI
+# - argocd/instances/ibm-sfg-db2-prod.yaml
+# - argocd/instances/ibm-sfg-mq-prod.yaml
+# - argocd/instances/ibm-sfg-b2bi-prod-setup.yaml
+# - argocd/instances/ibm-sfg-b2bi-prod.yaml
 
 patches:
 - target:
