--- a/0-bootstrap/single-cluster/1-infra/kustomization.yaml
+++ b/0-bootstrap/single-cluster/1-infra/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
 - argocd/namespace-sealed-secrets.yaml
 - argocd/serviceaccounts-b2bi-prod.yaml
 - argocd/sfg-b2bi-clusterwide.yaml
+- argocd/namespace-maaz.yaml
 
 patches:
 - target:
