--- a/0-bootstrap/single-cluster/2-services/kustomization.yaml
+++ b/0-bootstrap/single-cluster/2-services/kustomization.yaml
@@ -5,10 +5,10 @@ resources:
 - argocd/instances/sealed-secrets.yaml
 
 # # B2BI
-- argocd/instances/ibm-sfg-db2-prod.yaml
-- argocd/instances/ibm-sfg-mq-prod.yaml
-- argocd/instances/ibm-sfg-b2bi-prod-setup.yaml
-- argocd/instances/ibm-sfg-b2bi-prod.yaml
+# - argocd/instances/ibm-sfg-db2-prod.yaml
+# - argocd/instances/ibm-sfg-mq-prod.yaml
+# - argocd/instances/ibm-sfg-b2bi-prod-setup.yaml
+# - argocd/instances/ibm-sfg-b2bi-prod.yaml
 
 patches:
 - target:
